changed 'hannon' to 'Shannon'

--- a/Alpha Diversity.ipynb
+++ b/Alpha Diversity.ipynb
@@ -1558,7 +1558,7 @@
     }
    ],
    "source": [
-    "#hannon Div of 10k rarefied data\n",
+    "#Shannon Div of 10k rarefied data\n",
     "\n",
     "sha = estimate_richness(batrun_nt_10k, split = TRUE, measures = \"Shannon\")\n",
     "sha$SampleID = rownames(sha)\n",
